# transformer_from_scratch

./: .gitignore  README.md  config_reader.py  pyproject.toml  train.py
configs/: config.py
tools/: train.py
transformer_from_scratch/: train.py
